# kuhni

./: .env.example  .gitignore  README.md  TASKS.md  alembic.ini  index.html  pyproject.toml
assets/: assets-manifest.json  index-B0nPqYKo.js  index-B91p72Ti.js  index-BJWHapw7.css  index-BfZZzVHr.css  index-BkXa3lFK.js  index-BlbbI3fF.css  index-BojVrXyo.css  index-Br-GR3-H.css  index-ByHf_8rp.css  index-CDrrnNO5.js  index-CZL2XCnZ.js  index-CZqnEb7m.js  index-ChSVEC2M.js  index-CpoVdTX0.css  index-CqMEkvnM.js  index-D0ZDV2vO.css  index-DYN0npud.js  index-Da58EeB3.js  index-Dm6xTEoV.js  index-DzGif_Ho.css  index-SJveIZ6d.js  index-mBTf2yLq.css  index-s6E-D3QA.js  index-wQSWCgeo.css
backend/app/: __init__.py  main.py  seed.py
backend/migrations/: env.py
bot/: __init__.py  main.py
bot/adapters/: __init__.py  base.py  max.py  telegram.py
bot/handlers/: funnel.py  max_funnel.py
bot/keyboards/: funnel.py
bot/middlewares/: db.py
bot/states/: funnel.py
deploy/nginx/: interier-sslip.conf  interier-vps.conf  kitchen.conf
deploy/systemd/: kitchen-api.service  (+3 more)
docs/: ARCHITECTURE.md  CLIENT_ANSWERS.md  CONTENT.md  CONTENT_REQUIRED.md  DATABASE.md  DEPLOYMENT.md  FUNNEL.md  MAX_BOT_SCENARIO.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
media/: assets-manifest.json
scripts/: generate_placeholders.py  process_images.py
shared/: __init__.py  constants.py  enums.py
tests/: test_cms.py  test_generation_provider.py  test_max_adapter.py  test_max_funnel_helpers.py
worker/: broadcast_worker.py  generation_worker.py
(+53 files in other folders)
