[project]
name = "kitchen-platform"
version = "0.1.0"
description = "Платформа «Мебельный салон Интерьер»: сайт, MAX-бот, AI-визуализация и заявки"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",          # для подписанных сессий/CSRF
    # DB
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    # Validation / settings
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # HTTP client для AI-провайдера
    "httpx>=0.27",
    # Изображения
    "Pillow>=10.4",
    # Утилиты
    "python-dotenv>=1.0",
    "bcrypt>=4.1",                # хеширование паролей
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]
postgres = [
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
]

[tool.setuptools.packages.find]
include = ["backend*", "bot*", "shared*", "worker*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["frontend", "node_modules", "migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # длина строки контролируется форматтером

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false
